src/components/Control/Control.css
.Control {
  display: flex;
  flex-direction: column;
}

.Control > * {
  margin: 5px;
}

.Control-panel {
  display: flex;
  justify-content: center;
  align-items: stretch;
  flex-wrap: wrap;
}

.Control-panel-checkbox > * {
  vertical-align: middle;
}

.Control-panel > * {
  font-size: 18px;
}

